// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layout listview header empty 1`] = `undefined`;

exports[`layout listview header nav 1`] = `
<div class="listview__header">
  <!---->
  <div aria-label="Breadcrumb" role="navigation" class="el-breadcrumb listview__breadcrumb"><span class="el-breadcrumb__item"><span role="link" class="el-breadcrumb__inner">
      home
    </span><span role="presentation" class="el-breadcrumb__separator"></span></span><span class="el-breadcrumb__item" aria-current="page"><span role="link" class="el-breadcrumb__inner is-link">
      list
    </span><span role="presentation" class="el-breadcrumb__separator"></span></span></div>
</div>
`;

exports[`layout listview header title & nav 1`] = `
<div class="listview__header">
  <h1 class="listview__title">
    headerTitle
  </h1>
  <div aria-label="Breadcrumb" role="navigation" class="el-breadcrumb listview__breadcrumb"><span class="el-breadcrumb__item"><span role="link" class="el-breadcrumb__inner is-link">
      home
    </span><span role="presentation" class="el-breadcrumb__separator"></span></span><span class="el-breadcrumb__item" aria-current="page"><span role="link" class="el-breadcrumb__inner is-link">
      list
    </span><span role="presentation" class="el-breadcrumb__separator"></span></span></div>
</div>
`;

exports[`layout listview header title 1`] = `
<div class="listview__header">
  <h1 class="listview__title">
    headerTitle
  </h1>
  <div aria-label="Breadcrumb" role="navigation" class="el-breadcrumb listview__breadcrumb"></div>
</div>
`;

exports[`layout pager 1`] = `
<div class="listview">
  <!---->
  <div class="listview__main">
    <div class="list-view__filterbar list-view__filterbar--fold">
      <form class="el-form el-form--inline">
        <!---->
        <div class="filterbar__submit filterbar__submit--nomore filterbar__submit--onleft">
          <div class="filterbar__submit-btn" style="transform: translateX(0px);">
            <div class="el-form-item el-form-item--small">
              <!---->
              <div class="el-form-item__content"> <button type="button" class="el-button el-button--primary el-button--small">
                  <!----><i class="el-icon-search"></i><span>
            搜索
          </span></button> <button type="button" class="el-button el-button--default el-button--small">
                  <!---->
                  <!----><span>
            重置
          </span></button>
                <!---->
              </div>
            </div>
          </div> <button type="button" class="el-button filterbar__submit-more el-button--primary">
            <!----><i class="el-icon-caret-bottom"></i>
            <!----></button>
        </div>
        <!---->
      </form>
    </div>
    <div>
      <div class="listview__content">
        <div class="el-table el-table--fit el-table--striped el-table--border el-table--enable-row-hover el-table--small" style="width: 100%;">
          <div class="hidden-columns">
            <!---->
            <div></div>
          </div>
          <div class="el-table__header-wrapper">
            <table cellspacing="0" cellpadding="0" border="0" class="el-table__header">
              <colgroup></colgroup>
              <thead class="">
                <tr class=""></tr>
              </thead>
            </table>
          </div>
          <div class="el-table__body-wrapper is-scrolling-none">
            <table cellspacing="0" cellpadding="0" border="0" class="el-table__body">
              <colgroup></colgroup>
              <tbody>
                <!---->
              </tbody>
            </table>
            <div class="el-table__empty-block"><span class="el-table__empty-text">暂无数据</span></div>
            <!---->
          </div>
          <!---->
          <!---->
          <!---->
          <!---->
          <div class="el-table__column-resize-proxy" style="display: none;"></div>
        </div>
      </div>
      <!---->
    </div>
  </div>
</div>
`;
